--- a/website/static/stylesheets/styles.sass
+++ b/website/static/stylesheets/styles.sass
@@ -33,6 +33,8 @@ $card-border-radius: 2px
 // Import other stylesheets
 @import bourbon/bourbon
 @import reset
+@import spincycle
+
 @import font
 @import elements
 @import markdown
