--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -101,6 +101,12 @@
       left: 50%
       @include transform(translateX(-50%))
 
+    .no-photo-message
+      width: 100%
+      padding: 0 2.5%
+      float: left
+
+
   #public-cards,
   #private-cards,
   #additional-photos
