Minor copy change on no search results case

--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -36,7 +36,7 @@
   {% else %}
 
   <span class="help-message">
-    Sorry, no bird species match that term.
+    Sorry, Laura hasn't made a page for any bird matching that term.
   </span>
 
   {% endif %}
