--- a/website/static/stylesheets/home.sass
+++ b/website/static/stylesheets/home.sass
@@ -14,8 +14,10 @@
         font-family: 'Dosis'
         color: $chickadee-gray
 
-      div
+      img
         margin-top: $whitespace
+        width: 100%
+        height: 100%
 
       @media (max-width: 750px)
         span
@@ -24,5 +26,5 @@
       @media (max-width: 500px)
         span
           font-size: 18px
-        div
+        img
           margin-top: $whitespace / 2
