--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -10,14 +10,6 @@
     For the love, understanding, and protection of birds.
   </span>
 
-  <div style="position: relative; padding-bottom: 68%; height: 0; overflow: hidden;">
-    <iframe
-      id="iframe"
-      src="http://flickrit.com/slideshowholder.php?height=67&size=big&setId=72157650016196242&thumbnails=0&transition=1&layoutType=responsive&sort=0"
-      scrolling="no"
-      frameborder="0"
-      style="width:100%; height:100%; position: absolute; top:0; left:0;"
-    ></iframe>
-  </div>
+  <img src="https://farm3.staticflickr.com/2943/15443275435_f8e6e0ca79_b.jpg"/>
 </div>
 {% endblock %}
