Minor copy change

--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -96,7 +96,7 @@
             {% if program.supplemental_content_url %}
             <span class="transcript">
               <a href="{{ program.supplemental_content_url }}">
-                Transcript and photos</a>
+                Related blog post</a>
             </span>
             {% endif %}
 
