--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -73,7 +73,7 @@
         {% if program.supplemental_content_url %}
         <span id="transcript">
           <a href="{{ program.supplemental_content_url }}">
-            Transcript and photos</a>
+            Related blog post</a>
         </span>
         {% endif %}
       </div>
