--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -93,9 +93,9 @@
             <span>Audio missing</span>
             {% endif %}
 
-            {% if program.supplemental_content_url %}
+            {% if program.blog_url %}
             <span class="transcript">
-              <a href="{{ program.supplemental_content_url }}">
+              <a href="{{ program.blog_url }}">
                 Related blog post</a>
             </span>
             {% endif %}
