Show radio transcript as long as no blog_url

--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -86,7 +86,7 @@
 
 </div>
 
-{% if not program.blog_url and not program.file and program.transcript %}
+{% if not program.blog_url and program.transcript %}
 <div class="page-section">
   <h3 class="page-subtitle">Transcript</h3>
 
