Redo home page slideshow with Unslider

--- a/birds/static/stylesheets/photochecklist.sass
+++ b/birds/static/stylesheets/photochecklist.sass
@@ -17,6 +17,8 @@
         font-size: 200px
         color: $chickadee-white
         text-align: center
+        line-height: 100%
+        padding-bottom: $whitespace
 
         @media (max-width: 1120px)
           font-size: 18vw
