--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -714,26 +714,60 @@ html, body {
 
 #home #page-title {
   display: none; }
-#home #content #slideshow-wrapper {
+#home #home-wrapper {
   margin: auto;
-  text-align: center;
-  max-width: 900px; }
-  #home #content #slideshow-wrapper span {
+  max-width: 800px;
+  text-align: center; }
+  #home #home-wrapper #motto {
     font-style: italic;
     font-size: 26px;
     font-family: "Dosis";
     color: #9ba5a9; }
-  #home #content #slideshow-wrapper img {
+  #home #home-wrapper #home-slider {
     margin-top: 36px;
-    width: 100%;
-    height: 100%; }
+    background: black; }
+    #home #home-wrapper #home-slider .home-slide {
+      display: inline-block;
+      position: relative;
+      width: 100%; }
+      #home #home-wrapper #home-slider .home-slide:before {
+        content: "";
+        display: block;
+        margin-top: 60%; }
+      #home #home-wrapper #home-slider .home-slide img {
+        position: absolute;
+        left: 0;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transform: translateY(-50%);
+        width: 100%; }
+  #home #home-wrapper .unslider-nav ol {
+    list-style: none;
+    text-align: center; }
+  #home #home-wrapper .unslider-nav ol li {
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    margin: 0 4px;
+    background: transparent;
+    border-radius: 5px;
+    overflow: hidden;
+    text-indent: -999em;
+    border: 2px solid #9ba5a9;
+    cursor: pointer; }
+  #home #home-wrapper .unslider-nav ol li.unslider-active {
+    background: #9ba5a9;
+    cursor: default; }
   @media (max-width: 750px) {
-    #home #content #slideshow-wrapper span {
+    #home #home-wrapper #motto {
       font-size: 22px; } }
   @media (max-width: 500px) {
-    #home #content #slideshow-wrapper span {
+    #home #home-wrapper #motto {
       font-size: 18px; }
-    #home #content #slideshow-wrapper img {
+    #home #home-wrapper #home-slider {
       margin-top: 18px; } }
 
 #about img#primary-photo {
@@ -1040,7 +1074,9 @@ html, body {
       font-family: "adelaidaregular", sans-serif;
       font-size: 200px;
       color: #deedf2;
-      text-align: center; }
+      text-align: center;
+      line-height: 100%;
+      padding-bottom: 36px; }
       @media (max-width: 1120px) {
         #photo-checklist #content #photo-checklist-full h2 {
           font-size: 18vw; } }
