--- a/website/templates/head_common.html
+++ b/website/templates/head_common.html
@@ -9,8 +9,15 @@
 <link href="{% static 'stylesheets/styles.css' %}"
   rel="stylesheet" type="text/css" />
 
+<link href="{% static 'stylesheets/unslider.css' %}"
+  rel="stylesheet" type="text/css" />
+
 <script
   src="{% static 'js/jquery.js' %}"
+  type="text/javascript"></script>
+
+<script
+  src="{% static 'js/unslider-min.js' %}"
   type="text/javascript"></script>
 
 <script
