--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -24,6 +24,7 @@
     $(function() {
       $('.my-slider').unslider({
         autoplay: true,
+        infinite: true,
         arrows: false
       });
     })
