--- a/website/static/stylesheets/home.sass
+++ b/website/static/stylesheets/home.sass
@@ -16,23 +16,29 @@
     #home-slider
       margin-top: $whitespace
       background: black
+      position: relative
+      width: 100%
 
-      .home-slide
-        display: inline-block
-        position: relative
+      &:before
+        content: ""
+        display: block
+        margin-top: 60%
+
+      ul
+        position: absolute
+        top: 0
+        left: 0
         width: 100%
+        height: 100%
 
-        &:before
-          content: ""
-          display: block
-          margin-top: 60%
-
-        img
-          position: absolute
-          left: 0
+        li
           top: 50%
-          @include transform(translateY(-50%))
-          width: 100%
+
+          img
+            position: absolute
+            left: 0
+            @include transform(translateY(-50%))
+            width: 100%
 
     .unslider-nav ol
       list-style: none
