--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -725,25 +725,30 @@ html, body {
     color: #9ba5a9; }
   #home #home-wrapper #home-slider {
     margin-top: 36px;
-    background: black; }
-    #home #home-wrapper #home-slider .home-slide {
-      display: inline-block;
-      position: relative;
-      width: 100%; }
-      #home #home-wrapper #home-slider .home-slide:before {
-        content: "";
-        display: block;
-        margin-top: 60%; }
-      #home #home-wrapper #home-slider .home-slide img {
-        position: absolute;
-        left: 0;
-        top: 50%;
-        -webkit-transform: translateY(-50%);
-        -moz-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        -o-transform: translateY(-50%);
-        transform: translateY(-50%);
-        width: 100%; }
+    background: black;
+    position: relative;
+    width: 100%; }
+    #home #home-wrapper #home-slider:before {
+      content: "";
+      display: block;
+      margin-top: 60%; }
+    #home #home-wrapper #home-slider ul {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%; }
+      #home #home-wrapper #home-slider ul li {
+        top: 50%; }
+        #home #home-wrapper #home-slider ul li img {
+          position: absolute;
+          left: 0;
+          -webkit-transform: translateY(-50%);
+          -moz-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+          -o-transform: translateY(-50%);
+          transform: translateY(-50%);
+          width: 100%; }
   #home #home-wrapper .unslider-nav ol {
     list-style: none;
     text-align: center; }
