Remove http references

--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -11,7 +11,7 @@
 
 
 {% block head_extras %}
-<link href="http://www.lauraerickson.com/radio/feed.xml"
+<link href="{{ SITE_DOMAIN }}/radio/feed.xml"
   rel="alternate" type="application/rss+xml"
   title="Laura Erickson's For the Birds RSS feed" />
 {% endblock %}
