--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -8,7 +8,7 @@ $font-root: "../fonts/adelaida/adelaida-regular-webfont"
   font-style: normal
 
 
-@import url(http://fonts.googleapis.com/css?family=Dosis:200,500,600)
+@import url(//fonts.googleapis.com/css?family=Dosis:200,500,600)
 
 
 $base-font-size: 17px
