--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -4,7 +4,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url(http://fonts.googleapis.com/css?family=Dosis:200,500,600);
+@import url(//fonts.googleapis.com/css?family=Dosis:200,500,600);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
