Update footer domains to https

--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -23,14 +23,14 @@
   <div id="website-copyright">
 		<span>
 			Website by
-			<a href="http://katherineerickson.com/">Katherine Erickson</a>,
+			<a href="https://katherineerickson.com/">Katherine Erickson</a>,
 			code on
 			<a href="https://github.com/katur/forthebirds">Github</a>.
 		</span>
     <br>
 		<span>
 			Chickadee illustrations by
-			<a href="http://michaelgeraci.com">Michael P. Geraci</a>.
+			<a href="https://michaelgeraci.com">Michael P. Geraci</a>.
 		</span>
   </div>
 </div>
