--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -7,7 +7,7 @@
 <p>That is not a valid login. Please try again.</p>
 {% endif %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+<form method="post" action="{% url 'login_url' %}">
   {% csrf_token %}
 
   <table>
