"Related blog post" -> "Related blog post with transcript"

--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -96,7 +96,7 @@
             {% if program.blog_url %}
             <span class="transcript">
               <a href="{{ program.blog_url }}">
-                Related blog post</a>
+                Related blog post with transcript</a>
             </span>
             {% endif %}
 
