--- a/creations/templates/radio_program.html
+++ b/creations/templates/radio_program.html
@@ -73,7 +73,7 @@
         {% if program.blog_url %}
         <span id="transcript">
           <a href="{{ program.blog_url }}">
-            Related blog post</a>
+            Related blog post with transcript</a>
         </span>
         {% endif %}
       </div>
