Add URL for MN Bird Atlas

--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -110,6 +110,13 @@
             ABC&rsquo;s Bird of the Week</a>
         </span>
         {% endif %}
+
+        {% if bird.has_mn_bird_atlas_url %}
+        <span>
+          <a href="{{ bird.get_mn_bird_atlas_url }}">
+            MN Bird Atlas</a>
+        </span>
+        {% endif %}
       </div>
     </div>
   </div>
