%s/MN Bird Atlas/Minnesota Breeding Bird Atlas/g

--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -114,7 +114,7 @@
         {% if bird.has_mn_bird_atlas_url %}
         <span>
           <a href="{{ bird.get_mn_bird_atlas_url }}">
-            MN Bird Atlas</a>
+            Minnesota Breeding Bird Atlas</a>
         </span>
         {% endif %}
       </div>
